# CABM

./: .env.example  .gitattributes  .gitignore  .nobuild  CONTRIBUTING.md  DOCKER.md  DOCKER_COMPLETE.md  DOCKER_QUICKSTART.md  Dockerfile  MEMORY_MODULE_IMPLEMENTATION.md  README-en.md  README.md  STREAM_ARCHITECTURE.md  TTSapi.txt  ai_annotation.md  api_v2.py  app.py  build.ps1  build_details.py  cabm-gui.ps1  code-quality-report.md  config.py  deploy-docker.sh  deploy.ps1  docker-compose.prod.yml  docker-compose.yml  environment.yaml  migrate_to_faiss.py  migrate_to_peewee.py  package-lock.json  package.json  plan.txt  prompts.txt  pyproject.toml  report.md  requirements.txt  run.py  start.bat  start.py  start.sh  (+20 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Installation Manager/: main.cpp
all_docker_files/: .dockerignore  deploy.sh  docker-compose.dockerhub.yml  release.sh
api/: tag
backups/: README.md  app.py  config.py  run.py  start.bat  start.py
characters/: Collei.py  Collei.py.bak  Collei.toml  Dark_Seele.toml  Elysia.toml  Light_Seele.toml  Silver_Wolf.py  Silver_Wolf.toml  __init__.py  lingyin.py  lingyin.toml  test.toml  tt.toml
config/: app_settings.toml
data/: background.json  voice_cache.json
docs/: DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOY_GUIDE.md  DOCKER_PULL_GUIDE.md  DOCKER_SOLUTION.md  Docker_Method.md  ENHANCED_TTS_FEATURE.md  GHCR_PERMISSION_TROUBLESHOOTING.md  JAVASCRIPT_MODULARIZATION.md  NodeJS.md  QUICK_FIX_GHCR_PERMISSIONS.md  TTS_GPTSoVITS.md  Traditional_Method.md  WINDOWS_DEPLOY_GUIDE.md  meaning.md  (+2 more)
(+205 files in other folders)
