[project]
name = "cabm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "httpx==0.27.2",
    "numpy==1.24.3",
    "openai==1.54.4",
    "python-dotenv==1.0.0",
    "requests>=2.32.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
